[package]
name = "nu_plugin_net"
license = "MIT"
authors = ["Carson <c@rson.riker.me>", "gioeleguaiumi@gmail.com"]
keywords = ["nushell", "network", "plugin"]
homepage = "https://github.com/Zendikcar/nu_plugin_net"
repository = "https://github.com/Zendikcar/nu_plugin_net"
description = "A nushell plugin for enumerating network interfaces in a platform-agnostic way"
version = "1.11.0"
edition = "2021"
readme = "README.md"

[[bin]]
name = "nu_plugin_net"

[lib]

[dependencies]
nu-plugin = "0.111.0"
nu-protocol = { version = "0.111.0", features = ["plugin"] }
pnet = "0.35.0"
